--- a/form.html
+++ b/form.html
@@ -10,10 +10,23 @@
         <p>First name: <input type="text" name="first" value="Aragorn"></p>
         <p>Middle name: <input type="text" name="middle" value="Elessar"></p>
         <p>Last name: <input type="text" name="last" value="Telcontar"></p>
-        <input type="button" value="Make name">
+        <input type="button" value="Make name" onclick="makeBetterName()">
       </form> 
       
       <h3 id="name">Name will go here</h3>
-    
+      <script>
+        function makeBetterName() {
+            let fName = document.getElementById("nameForm").first.value;
+            let mName = document.getElementById("nameForm").middle.value;
+            let lName = document.getElementById("nameForm").last.value;
+          if (mName.length === 1) {
+            let fullName = fName + " " + mName + ". " + lName;
+            document.getElementById("name").innerHTML = fullName;
+          } else {
+            let fullName = fName + " " + mName + " " + lName;
+            document.getElementById("name").innerHTML = fullName;
+          }
+        }
+        </script>
 </body>
 </html>
